# fileManagerMcpServer

./: .gitignore  README.md  pyproject.toml  requirements.txt  server.py
controllers/: file_controller.py
models/: fileModel.py
